issue #6 design: move layout spacing from ImgSlider to Home

--- a/src/components/ImgSlider/index.module.css
+++ b/src/components/ImgSlider/index.module.css
@@ -1,6 +1,5 @@
 .layout {
     position: relative;
-    margin-inline: 22px;
     background-color: var(--color-disabled);
     border-radius: 10px;
 }
